Fixed polling issue